Start making dev env more flexible

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx
-ARG PHP_VERSION=*
+ARG PHP_VERSION=php70
 
-COPY $PHP_VERSION.conf /etc/nginx/conf.d/
-COPY includes/*.conf /etc/nginx/conf.d/includes/
+# COPY $PHP_VERSION.conf /etc/nginx/conf.d/
+# COPY includes/*.conf /etc/nginx/conf.d/includes/
 
 # generate self signed ssl cert
 RUN mkdir /etc/nginx/ssl \
