--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,4 @@
 server {
-  listen       80;
   server_name  _;
 #  server_name  ~^(www\.)?(?<php>.+)\.local$; // $php var?
   root         /usr/share/nginx/html;
@@ -13,7 +12,7 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php70:9000;
   }
 }
 
@@ -35,6 +34,6 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php70:9000;
   }
 }
