--- a/nginx/php56.conf
+++ b/nginx/php56.conf
@@ -1,6 +1,6 @@
 server {
   listen       80;
-  server_name  php56.local;
+  server_name  php56.*;
   root         /usr/share/nginx/html;
   index        index.php index.html index.htm;
 
@@ -12,7 +12,7 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php56:9000;
   }
 }
 
@@ -20,7 +20,7 @@ server {
 # HTTPS server
 server {
   listen 443;
-  server_name php56.local;
+  server_name php56.*;
 
   root /usr/share/nginx/html;
   index index.php index.html index.htm;
@@ -34,6 +34,6 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php56:9000;
   }
 }
