--- a/php70/Dockerfile
+++ b/php70/Dockerfile
@@ -1,9 +1,5 @@
 FROM php:7.0-fpm
 
-# copy endpoint script
-COPY docker-entrypoint.sh /entrypoint.sh
-ADD https://raw.githubusercontent.com/kilbot/WooCommerce-Dev-Docker/master/bin/entrypoint-common.sh /
-
 # install the PHP extensions we need
 RUN apt-get update \
   && apt-get install -y --no-install-recommends unzip subversion \
@@ -31,12 +27,17 @@ RUN curl https://phar.phpunit.de/phpunit.phar -L > phpunit.phar \
   && mv phpunit.phar /usr/local/bin/phpunit \
   && phpunit --version
 
+# copy endpoint script
+COPY docker-entrypoint.sh /entrypoint.sh
+# ADD https://raw.githubusercontent.com/kilbot/WooCommerce-Dev-Docker/master/bin/entrypoint-common.sh /
+
 # add wp-cli for use in entrypoint, also fix permissions
 RUN curl -o /usr/local/bin/wp -SL https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
   && chmod +x /usr/local/bin/wp \
   && wp --info --allow-root \
-  && chmod +x /entrypoint.sh \
-  && chmod +x /entrypoint-common.sh
+  && chmod +x /entrypoint.sh
+  # && chmod +x /entrypoint-common.sh
+
 
 # grr, ENTRYPOINT resets CMD now
 ENTRYPOINT ["/entrypoint.sh"]
