--- a/docker-php70.yml
+++ b/docker-php70.yml
@@ -1,55 +1,53 @@
-version: '2'
+version: '2.1'
 services:
-  nginx:
-    build:
-      context: ./nginx
-      args:
-        PHP_VERSION: php70
-    container_name: nginx
+  static:
+    build: ./nginx
+    container_name: ${COMPOSE_PROJECT_NAME}-static
     restart: always
     ports:
-      - "80:80"
-      - "443:443"
+      - "${LOCALHOST_HTTP_PORT:-80}:80"
+      - "${LOCALHOST_HTTPS_PORT:-443}:443"
     volumes:
       - ../.html:/usr/share/nginx/html
-      - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME}
+      - ../:/usr/share/nginx/html/wp-content/plugins/${COMPOSE_PROJECT_NAME}
+      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/php70.conf:/etc/nginx/conf.d/php70.conf
+      - ./nginx/includes:/etc/nginx/conf.d/includes
     depends_on:
-      - php70
+      - app-php70
     expose:
       - "80"
       - "443"
     networks:
       default:
         aliases:
-          - php70.local
+          - php70.${LOCALHOST_DOMAIN}
     env_file: ../.env
 
-  php70:
+  app-php70:
     build: ./php70
-    container_name: php70
+    container_name: ${COMPOSE_PROJECT_NAME}-app-php70
     restart: always
     ports:
-      - "9054:9000"
+      - "9070:9000"
     volumes:
       - ../.html:/var/www/html
-      - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME}
+      - ../:/var/www/html/wp-content/plugins/${COMPOSE_PROJECT_NAME}
     depends_on:
-      - mysql57
+      - db-mysql57
     extra_hosts:
       - "remote_host:${XDEBUG_REMOTE_HOST}"
     networks:
       - default
-    environment:
-      - WP_VERSION=${WP_VERSION}
-      - WP_MULTISITE=${WP_MULTISITE}
-      - WC_VERSION=${WC_VERSION}
     env_file:
       - wordpress.env
       - ../.env
+    environment:
+      WORDPRESS_DB_HOST: "${COMPOSE_PROJECT_NAME}-db-mysql57:3306"
 
-  mysql57:
+  db-mysql57:
     build: ./mysql57
-    container_name: mysql57
+    container_name: ${COMPOSE_PROJECT_NAME}-db-mysql57
     restart: always
     ports:
       - "9017:3306"
