--- a/nginx/php55.conf
+++ b/nginx/php55.conf
@@ -34,6 +34,6 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php55:9000;
+    fastcgi_pass app-php55:9000;
   }
 }
