--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
+  listen       80;
   server_name  _;
-#  server_name  ~^(www\.)?(?<php>.+)\.local$; // $php var?
   root         /usr/share/nginx/html;
   index        index.php index.html index.htm;
 
@@ -20,7 +20,7 @@ server {
 # HTTPS server
 server {
   listen 443;
-  server_name localhost;
+  server_name php70.*;
 
   root /usr/share/nginx/html;
   index index.php index.html index.htm;
