--- a/docker.yml
+++ b/docker.yml
@@ -10,9 +10,7 @@ services:
     volumes:
       - ../.html:/usr/share/nginx/html
       - ../:/usr/share/nginx/html/wp-content/plugins/${COMPOSE_PROJECT_NAME}
-      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/php56.conf:/etc/nginx/conf.d/php56.conf
-      - ./nginx/php70.conf:/etc/nginx/conf.d/php70.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/includes:/etc/nginx/conf.d/includes
     depends_on:
       - app-php70
@@ -24,27 +22,6 @@ services:
         aliases:
           - php70.${LOCALHOST_DOMAIN}
     env_file: ../.env
-
-  app-php56:
-    build: ./php56
-    container_name: ${COMPOSE_PROJECT_NAME}-app-php56
-    restart: always
-    ports:
-      - "${LOCALHOST_PHP56_PORT:-9056}:9000"
-    volumes:
-      - ../.html:/var/www/html
-      - ../:/var/www/html/wp-content/plugins/${COMPOSE_PROJECT_NAME}
-    depends_on:
-      - db-mysql56
-    extra_hosts:
-      - "remote_host:${XDEBUG_REMOTE_HOST}"
-    networks:
-      - default
-    env_file:
-      - wordpress.env
-      - ../.env
-    environment:
-      WORDPRESS_DB_HOST: "${COMPOSE_PROJECT_NAME}-db-mysql56:3306"
 
   app-php70:
     build: ./php70
@@ -67,26 +44,6 @@ services:
       - ../.env
     environment:
       WORDPRESS_DB_HOST: "${COMPOSE_PROJECT_NAME}-db-mysql57:3306"
-  
-  db-mysql56:
-    build: ./mysql56
-    container_name: ${COMPOSE_PROJECT_NAME}-db-mysql56
-    restart: always
-    ports:
-      - "${LOCALHOST_MYSQL56_PORT:-9016}:3306"
-    volumes:
-      - ../.data/mysql56:/var/lib/mysql
-    networks:
-      - default
-    env_file: mysql.env
-    healthcheck:
-      test: [
-        "CMD-SHELL",
-        "mysql --protocol=socket -hlocalhost -uroot -p$MYSQL_ROOT_PASSWORD -e 'SELECT 1'",
-      ]
-      interval: 1s
-      timeout: 10s
-      retries: 20
 
   db-mysql57:
     build: ./mysql57
