add necessary compose .env var to example file

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ LOCALHOST_PHP55_PORT=9055
 LOCALHOST_PHP56_PORT=9056
 LOCALHOST_PHP70_PORT=9070
 
-# db containers ports
+# mysql
+MYSQL_ROOT_PASSWORD=wordpress
 LOCALHOST_MYSQL56_PORT=9016
 LOCALHOST_MYSQL57_PORT=9017
 
