cleanup .env example file

--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,11 @@ LOCALHOST_DOMAIN=odysseus.dev
 LOCALHOST_HTTP_PORT=9080
 LOCALHOST_HTTPS_PORT=9443
 
-# app containers ports
-LOCALHOST_PHP54_PORT=9054
-LOCALHOST_PHP55_PORT=9055
-LOCALHOST_PHP56_PORT=9056
+# app containers 
 LOCALHOST_PHP70_PORT=9070
 
 # mysql
 MYSQL_ROOT_PASSWORD=wordpress
-LOCALHOST_MYSQL56_PORT=9016
 LOCALHOST_MYSQL57_PORT=9017
 
 # xdebug.remote_host = your ip address
