--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+## this is the docker-compose .env file
+
 # project name used by docker
 COMPOSE_PROJECT_NAME=odysseus
 
@@ -6,15 +8,18 @@ LOCALHOST_HTTP_PORT=9080
 LOCALHOST_HTTPS_PORT=9443
 
 # app containers 
-LOCALHOST_PHP70_PORT=9070
+LOCALHOST_PHP56_PORT=9056
 
 # mysql
+LOCALHOST_MYSQL56_PORT=9016
+
+# this env var is in this docker-compose env file because
+# it is needed in the confg file for a healthcheck of the mysql container
 MYSQL_ROOT_PASSWORD=wordpress
-LOCALHOST_MYSQL57_PORT=9017
 
 # xdebug.remote_host = your ip address
 # cat ~/Library/Containers/com.docker.docker/Data/database/com.docker.driver.amd64-linux/slirp/host
-XDEBUG_REMOTE_HOST=192.168.65.1
+XDEBUG_REMOTE_HOST=192.168.1.1
 
 # wordpress & woocommerce versions
 # WP_VERSION=latest
