--- a/nginx/php56.conf
+++ b/nginx/php56.conf
@@ -12,7 +12,7 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php56:9000;
   }
 }
 
@@ -34,6 +34,6 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php56:9000;
+    fastcgi_pass app-php56:9000;
   }
 }
