--- a/docker-php55.yml
+++ b/docker-php55.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3'
 services:
   static:
     build: ./nginx
@@ -10,10 +10,10 @@ services:
     volumes:
       - ../.html:/usr/share/nginx/html
       - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME}
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/php55.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/includes:/etc/nginx/conf.d/includes
     depends_on:
-      - app-php56
+      - app-php55
     expose:
       - "80"
       - "443"
@@ -31,8 +31,7 @@ services:
       - ../.html:/var/www/html
       - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME}
     depends_on:
-      db-mysql56:
-        condition: service_healthy
+      - db-mysql56
     extra_hosts:
       - "remote_host:${XDEBUG_REMOTE_HOST}"
     networks:
@@ -40,8 +39,6 @@ services:
     env_file:
       - wordpress.env
       - ../.env
-    environment:
-      WORDPRESS_DB_HOST: "${PROJECT_NAME}-db-mysql56:3306"
 
   db-mysql56:
     build: ./mysql56
@@ -54,14 +51,6 @@ services:
     networks:
       - default
     env_file: mysql.env
-    healthcheck:
-      test: [
-        "CMD-SHELL",
-        "mysql --protocol=socket -hlocalhost -uroot -p$MYSQL_ROOT_PASSWORD -e 'SELECT 1'",
-      ]
-      interval: 2s
-      timeout: 10s
-      retries: 20
 
 networks:
   default:
