--- a/docker-php70.yml
+++ b/docker-php70.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3'
 services:
   static:
     build: ./nginx
@@ -10,7 +10,7 @@ services:
     volumes:
       - ../.html:/usr/share/nginx/html
       - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME}
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/php70.conf
       - ./nginx/includes:/etc/nginx/conf.d/includes
     depends_on:
       - app-php70
@@ -31,17 +31,14 @@ services:
       - ../.html:/var/www/html
       - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME}
     depends_on:
-      db-mysql57:
-        condition: service_healthy
+      - db-mysql57
     extra_hosts:
       - "remote_host:${XDEBUG_REMOTE_HOST}"
     networks:
       - default
     env_file:
-      - wordpress.env
+      - wordpress-mysql57.env
       - ../.env
-    environment:
-      WORDPRESS_DB_HOST: "${PROJECT_NAME}-db-mysql57:3306"
 
   db-mysql57:
     build: ./mysql57
@@ -54,14 +51,6 @@ services:
     networks:
       - default
     env_file: mysql.env
-    healthcheck:
-      test: [
-        "CMD-SHELL",
-        "mysql --protocol=socket -hlocalhost -uroot -p$MYSQL_ROOT_PASSWORD -e 'SELECT 1'",
-      ]
-      interval: 2s
-      timeout: 10s
-      retries: 20
 
 networks:
   default:
