--- a/docker-php54.yml
+++ b/docker-php54.yml
@@ -18,7 +18,9 @@ services:
       - "80"
       - "443"
     networks:
-      - default
+      default:
+        aliases:
+          - php54.local
     env_file: ../.env
 
   app-php54:
