--- a/docker-php70.yml
+++ b/docker-php70.yml
@@ -18,7 +18,9 @@ services:
       - "80"
       - "443"
     networks:
-      - default
+      default:
+        aliases:
+          - php70.local
     env_file: ../.env
 
   app-php70:
