--- a/docker.yml
+++ b/docker.yml
@@ -18,7 +18,9 @@ services:
       - "80"
       - "443"
     networks:
-      - default
+      default:
+        aliases:
+          - php56.local
     env_file: ../.env
 
   app-php56:
