Use PHPUnit 5.7 for PHP 7
PHPUnit 6 uses namespaces which conflicts with WP Test Suite

--- a/php70/Dockerfile
+++ b/php70/Dockerfile
@@ -26,7 +26,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --in
   && composer global require guzzlehttp/guzzle:5
 
 # install phpunit
-RUN curl https://phar.phpunit.de/phpunit.phar -L > phpunit.phar \
+# force PHPUnit to 5.7, version 6 uses namespaces which casuses problems with WP Test Suite
+RUN curl https://phar.phpunit.de/phpunit-5.7.phar -L > phpunit.phar \
   && chmod +x phpunit.phar \
   && mv phpunit.phar /usr/local/bin/phpunit \
   && phpunit --version
