add XDEBUG_REMOTE_HOST for windows

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,9 @@ PROJECT_NAME=plugin-folder
 # LOCALHOST_MYSQL56_PORT=9016
 # LOCALHOST_MYSQL57_PORT=9017
 
-# xdebug.remote_host = your ip address
+# xdebug.remote_host = your docker ip address
 # cat ~/Library/Containers/com.docker.docker/Data/database/com.docker.driver.amd64-linux/slirp/host
+# or, use ipconfig to get the ip address for DockerNAT
 XDEBUG_REMOTE_HOST=192.168.1.1
 
 # wordpress & woocommerce versions
