--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ XDEBUG_REMOTE_HOST=192.168.1.1
 # WP_VERSION=latest
 # WP_MULTISITE=0
 # WC_VERSION=latest
+
+# download packages to shared volume
+WP_CLI_PACKAGES_DIR=/var/www/html
