--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,50 @@
-## this is the docker-compose .env file
+## these environment variables are passed to containers via docker-compose
+## copy this to your plugin root directory and rename as .env
 
-# project name used by docker & plugin folder name
-PROJECT_NAME=plugin-folder
+## project name used by docker & plugin folder name
+# PROJECT_NAME=my-plugin
 
-# http & https ports
+## development matrix
+# PHP_VERSION=7.2
+# MYSQL_VERSION=5.7
+# WP_VERSION=latest
+# WP_MULTISITE=0
+# WC_VERSION=latest
+
+## wordpress settings
+# WP_USER=admin
+# WP_PASSWORD=password
+# WP_EMAIL=example@example.com
+# WP_TITLE=Localhost
+
+## Xdebug
+## xdebug.remote_host = your docker ip address
+## on linux: docker-compose exec php bash -c "route | awk '/^default/ { print \$2 }'"
+## on mac: cat ~/Library/Containers/com.docker.docker/Data/database/com.docker.driver.amd64-linux/slirp/host
+## on win: cmd ipconfig to get the ip address for DockerNAT
+# XDEBUG_REMOTE_HOST=192.168.65.1
+# XDEBUG_REMOTE_PORT=9000
+# XDEBUG_REMOTE_CONNECT_BACK=0
+# XDEBUG_REMOTE_AUTOSTART=1
+# XDEBUG_REMOTE_ENABLE=1
+
+## http & https ports
 # LOCALHOST_HTTP_PORT=80
 # LOCALHOST_HTTPS_PORT=443
 
-# app containers
+## app containers
 # LOCALHOST_PHP54_PORT=9054
 # LOCALHOST_PHP55_PORT=9055
 # LOCALHOST_PHP56_PORT=9056
 # LOCALHOST_PHP70_PORT=9070
 
-# mysql
+## mysql
 # LOCALHOST_MYSQL56_PORT=9016
 # LOCALHOST_MYSQL57_PORT=9017
+# MYSQL_ROOT_PASSWORD=wordpress
+# DB_NAME=wordpress
+# DB_HOST=db-mysql57:3306
+# DB_PASSWORD=wordpress
 
-# xdebug.remote_host = your docker ip address
-# cat ~/Library/Containers/com.docker.docker/Data/database/com.docker.driver.amd64-linux/slirp/host
-# or, use ipconfig to get the ip address for DockerNAT
-XDEBUG_REMOTE_HOST=192.168.1.1
-
-# wordpress & woocommerce versions
-# WP_VERSION=latest
-# WP_MULTISITE=0
-# WC_VERSION=latest
-
-# download packages to shared volume
-WP_CLI_PACKAGES_DIR=/var/www/html
+# directory for wp cli packages
+# WP_CLI_PACKAGES_DIR=/var/www/html
