--- a/docker.yml
+++ b/docker.yml
@@ -1,62 +1,80 @@
-version: "3.7"
+version: "3.0"
 services:
   static:
-    build: ./nginx
-    container_name: ${PROJECT_NAME}-static
+    build:
+      context: ./
+      dockerfile: nginx/Dockerfile
+    container_name: ${PROJECT_NAME:-my-plugin}-static
     restart: always
     ports:
       - "${LOCALHOST_HTTP_PORT:-80}:80"
       - "${LOCALHOST_HTTPS_PORT:-443}:443"
     volumes:
       - ../.html:/usr/share/nginx/html
-      - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME}
-      - ./nginx/php56.conf:/etc/nginx/conf.d/default.conf
+      - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME:-my-plugin}
+      - ./nginx/php72.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/includes:/etc/nginx/conf.d/includes
     depends_on:
-      - app-php56
+      - app-php72
     expose:
       - "80"
       - "443"
     networks:
       default:
         aliases:
-          - php56.local
+          - php72.local
     env_file: ../.env
 
-  app-php56:
-    build: ./php56
-    container_name: ${PROJECT_NAME}-app-php56
+  app-php72:
+    build:
+      context: ./
+      dockerfile: php72/Dockerfile
+      args:
+        xdebug_remote_autostart: ${XDEBUG_REMOTE_AUTOSTART:-1}
+        xdebug_remote_connect_back: ${XDEBUG_REMOTE_CONNECT_BACK:-1}
+        xdebug_remote_enable: ${XDEBUG_REMOTE_ENABLE:-1}
+        xdebug_remote_host: ${XDEBUG_REMOTE_HOST:-192.168.65.1}
+        xdebug_remote_port: ${XDEBUG_REMOTE_PORT:-9000}
+    container_name: ${PROJECT_NAME:-my-plugin}-app-php72
     restart: always
     ports:
-      - "${LOCALHOST_PHP56_PORT:-9056}:9000"
+      - "${LOCALHOST_PHP72_PORT:-9070}:9000"
     volumes:
       - ../.html:/var/www/html
-      - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME}
+      - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME:-my-plugin}
     depends_on:
       - db-mysql57
-    extra_hosts:
-      - "remote_host:${XDEBUG_REMOTE_HOST}"
     networks:
       - default
-    environment: 
-      - WP_VERSION=${WP_VERSION}
-      - WP_MULTISITE=${WP_MULTISITE}
-      - WC_VERSION=${WC_VERSION}
-    env_file:
-      - wordpress.env
-      - ../.env
+    environment:
+      - WP_VERSION=${WP_VERSION:-latest}
+      - WC_VERSION=${WC_VERSION:-latest}
+      - WP_MULTISITE=${WP_MULTISITE:-0}
+      - WP_CLI_PACKAGES_DIR=${WP_CLI_PACKAGES_DIR:-/var/www/html}
+      - WP_USER=${WP_USER:-admin}
+      - WP_EMAIL=${WP_EMAIL:-example@example.com}
+      - WP_PASSWORD=${WP_PASSWORD:-password}
+      - WP_TITLE=${WP_TITLE:-Localhost}
+      - DB_HOST=${DB_HOST:-db-mysql57:3306}
+      - DB_NAME=${DB_NAME:-wordpress}
+      - DB_PASSWORD=${DB_PASSWORD:-wordpress}
+    env_file: ../.env
 
   db-mysql57:
-    build: ./mysql57
-    container_name: ${PROJECT_NAME}-db-mysql57
+    image: mysql:5.7
+    container_name: ${PROJECT_NAME:-my-plugin}-db-mysql57
     restart: always
     ports:
       - "${LOCALHOST_MYSQL57_PORT:-9017}:3306"
     volumes:
       - ../.data/mysql57:/var/lib/mysql
     networks:
-      - default
-    env_file: mysql.env
+      default:
+        aliases:
+          - mysql57.local
+    environment:
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-wordpress}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-wordpress}
 
 networks:
   default:
