--- a/mysql57/Dockerfile
+++ b/mysql57/Dockerfile
@@ -1,3 +1,2 @@
 FROM mysql:5.7
-ADD data.sql /docker-entrypoint-initdb.d
-ADD test-db.sh /docker-entrypoint-initdb.d
+ADD bin/test-db.sh /docker-entrypoint-initdb.d
