simplify docker options

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,23 @@
 server {
   listen       80;
+  listen       [::]:80;
   server_name  _;
-#  server_name  ~^(www\.)?(?<php>.+)\.local$; // $php var?
   root         /usr/share/nginx/html;
   index        index.php index.html index.htm;
 
-  include      /etc/nginx/conf.d/includes/wordpress.conf;
+  # This order might seem weird - this is attempted to match last if rules below fail.
+  # http://wiki.nginx.org/HttpCoreModule
+  location / {
+    try_files $uri $uri/ /index.php?$args;
+  }
+
+  # Add trailing slash to */wp-admin requests.
+  rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+
+  # Directives to send expires headers and turn off 404 error logging.
+  location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+    access_log off; log_not_found off; expires max;
+  }
 
   # Pass all .php files onto a php-fpm/php-fcgi server.
   location ~ [^/]\.php(/|$) {
@@ -13,21 +25,40 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass app-php56:9000;
+    fastcgi_pass php:9000;
   }
 }
 
 
 # HTTPS server
 server {
-  listen 443;
-  server_name localhost;
+  listen       443;
+  listen       [::]:443;
+  server_name  _;
+  root         /usr/share/nginx/html;
+  index        index.php index.html index.htm;
 
-  root /usr/share/nginx/html;
-  index index.php index.html index.htm;
+  ssl on;
+  ssl_certificate /etc/nginx/ssl/nginx.crt;
+  ssl_certificate_key /etc/nginx/ssl/nginx.key;
+  ssl_session_timeout 5m;
+  ssl_protocols SSLv3 TLSv1;
+  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
+  ssl_prefer_server_ciphers on;
 
-  include /etc/nginx/conf.d/includes/ssl.conf;
-  include /etc/nginx/conf.d/includes/wordpress.conf;
+  # This order might seem weird - this is attempted to match last if rules below fail.
+  # http://wiki.nginx.org/HttpCoreModule
+  location / {
+    try_files $uri $uri/ /index.php?$args;
+  }
+
+  # Add trailing slash to */wp-admin requests.
+  rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+
+  # Directives to send expires headers and turn off 404 error logging.
+  location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+    access_log off; log_not_found off; expires max;
+  }
 
   # Pass all .php files onto a php-fpm/php-fcgi server.
   location ~ [^/]\.php(/|$) {
@@ -35,6 +66,6 @@ server {
     include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass app-php56:9000;
+    fastcgi_pass php:9000;
   }
 }
