--- a/.env.example
+++ b/.env.example
@@ -4,18 +4,25 @@
 ## project name used by docker & plugin folder name
 # PROJECT_NAME=my-plugin
 
-## development matrix
+## default development settings
 # PHP_VERSION=7.2
 # MYSQL_VERSION=5.7
 # WP_VERSION=latest
-# WP_MULTISITE=0
 # WC_VERSION=latest
+# WP_MULTISITE=0
 
 ## wordpress settings
 # WP_USER=admin
 # WP_PASSWORD=password
 # WP_EMAIL=example@example.com
 # WP_TITLE=Localhost
+# WP_URL=localhost
+
+## external ports
+# LOCALHOST_HTTP_PORT=80
+# LOCALHOST_HTTPS_PORT=443
+# LOCALHOST_PHP_PORT=9001
+# LOCALHOST_MYSQL_PORT=3306
 
 ## Xdebug
 ## xdebug.remote_host = your docker ip address
@@ -24,23 +31,8 @@
 ## on win: cmd ipconfig to get the ip address for DockerNAT
 # XDEBUG_REMOTE_HOST=192.168.65.1
 # XDEBUG_REMOTE_PORT=9000
-# XDEBUG_REMOTE_CONNECT_BACK=0
-# XDEBUG_REMOTE_AUTOSTART=1
-# XDEBUG_REMOTE_ENABLE=1
-
-## http & https ports
-# LOCALHOST_HTTP_PORT=80
-# LOCALHOST_HTTPS_PORT=443
-
-## app containers
-# LOCALHOST_PHP54_PORT=9054
-# LOCALHOST_PHP55_PORT=9055
-# LOCALHOST_PHP56_PORT=9056
-# LOCALHOST_PHP70_PORT=9070
 
 ## mysql
-# LOCALHOST_MYSQL56_PORT=9016
-# LOCALHOST_MYSQL57_PORT=9017
 # MYSQL_ROOT_PASSWORD=wordpress
 # DB_NAME=wordpress
 # DB_HOST=db-mysql57:3306
