--- a/docker.yml
+++ b/docker.yml
@@ -1,49 +1,50 @@
 version: "3.0"
 services:
+
   static:
+    image: static
     build:
       context: ./
       dockerfile: nginx/Dockerfile
     container_name: ${PROJECT_NAME:-my-plugin}-static
-    restart: always
+#    restart: always
     ports:
       - "${LOCALHOST_HTTP_PORT:-80}:80"
       - "${LOCALHOST_HTTPS_PORT:-443}:443"
     volumes:
       - ../.html:/usr/share/nginx/html
-      - ../:/usr/share/nginx/html/wp-content/plugins/${PROJECT_NAME:-my-plugin}
-      - ./nginx/php72.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/includes:/etc/nginx/conf.d/includes
+      - ../:/usr/share/nginx/html/plugins/${PROJECT_NAME:-my-plugin}
     depends_on:
-      - app-php72
+      - php
     expose:
       - "80"
       - "443"
     networks:
       default:
         aliases:
-          - php72.local
+          - ${WP_URL:-localhost}
     env_file: ../.env
 
-  app-php72:
+  php:
+    image: php:${PHP_VERSION:-7.2}
     build:
       context: ./
-      dockerfile: php72/Dockerfile
+      dockerfile: php/Dockerfile
       args:
+        php_version: ${PHP_VERSION:-7.2}
         xdebug_remote_autostart: ${XDEBUG_REMOTE_AUTOSTART:-1}
-        xdebug_remote_connect_back: ${XDEBUG_REMOTE_CONNECT_BACK:-1}
         xdebug_remote_enable: ${XDEBUG_REMOTE_ENABLE:-1}
         xdebug_remote_host: ${XDEBUG_REMOTE_HOST:-192.168.65.1}
         xdebug_remote_port: ${XDEBUG_REMOTE_PORT:-9000}
-    container_name: ${PROJECT_NAME:-my-plugin}-app-php72
-    restart: always
+    container_name: ${PROJECT_NAME:-my-plugin}-php-${PHP_VERSION:-7.2}
+#    restart: always
     ports:
-      - "${LOCALHOST_PHP72_PORT:-9070}:9000"
+      - "${LOCALHOST_PHP_PORT:-9001}:9000"
     volumes:
       - ../.html:/var/www/html
-      - ../:/var/www/html/wp-content/plugins/${PROJECT_NAME:-my-plugin}
+      - ../:/var/www/html/plugins/${PROJECT_NAME:-my-plugin}
     depends_on:
-      - db-mysql57
+      - mysql
     networks:
       - default
     environment:
@@ -55,26 +56,27 @@ services:
       - WP_EMAIL=${WP_EMAIL:-example@example.com}
       - WP_PASSWORD=${WP_PASSWORD:-password}
       - WP_TITLE=${WP_TITLE:-Localhost}
-      - DB_HOST=${DB_HOST:-db-mysql57:3306}
+      - WP_URL=${WP_URL:-localhost}
+      - DB_HOST=${DB_HOST:-mysql:3306}
       - DB_NAME=${DB_NAME:-wordpress}
       - DB_PASSWORD=${DB_PASSWORD:-wordpress}
     env_file: ../.env
 
-  db-mysql57:
-    image: mysql:5.7
-    container_name: ${PROJECT_NAME:-my-plugin}-db-mysql57
-    restart: always
+  mysql:
+    image: mysql:${MYSQL_VERSION:-5.7}
+    container_name: ${PROJECT_NAME:-my-plugin}-mysql-${MYSQL_VERSION:-5.7}
+#    restart: always
     ports:
-      - "${LOCALHOST_MYSQL57_PORT:-9017}:3306"
+      - "${LOCALHOST_MYSQL_PORT:-3306}:3306"
     volumes:
-      - ../.data/mysql57:/var/lib/mysql
+      - ../.data/mysql${MYSQL_VERSION:-5.7}:/var/lib/mysql
+      - ./mysql:/etc/mysql/conf.d
     networks:
-      default:
-        aliases:
-          - mysql57.local
+      - default
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE:-wordpress}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-wordpress}
+    env_file: ../.env
 
 networks:
   default:
