--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,7 @@
 FROM nginx
 
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+
 # generate self signed ssl cert
 RUN apt-get update \
   && apt-get install -y --no-install-recommends openssl \
