--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,44 +1,12 @@
 server {
-  listen       80;
-  listen       [::]:80;
+  listen       80 default_server;
+  listen       443 ssl;
   server_name  _;
   root         /usr/share/nginx/html;
   index        index.php index.html index.htm;
+  error_log    /usr/share/nginx/html/nginx_error.log;
+  access_log   /usr/share/nginx/html/nginx_access.log;
 
-  # This order might seem weird - this is attempted to match last if rules below fail.
-  # http://wiki.nginx.org/HttpCoreModule
-  location / {
-    try_files $uri $uri/ /index.php?$args;
-  }
-
-  # Add trailing slash to */wp-admin requests.
-  rewrite /wp-admin$ $scheme://$host$uri/ permanent;
-
-  # Directives to send expires headers and turn off 404 error logging.
-  location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
-    access_log off; log_not_found off; expires max;
-  }
-
-  # Pass all .php files onto a php-fpm/php-fcgi server.
-  location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    include fastcgi_params;
-    fastcgi_index index.php;
-    fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-    fastcgi_pass php:9000;
-  }
-}
-
-
-# HTTPS server
-server {
-  listen       443;
-  listen       [::]:443;
-  server_name  _;
-  root         /usr/share/nginx/html;
-  index        index.php index.html index.htm;
-
-  ssl on;
   ssl_certificate /etc/nginx/ssl/nginx.crt;
   ssl_certificate_key /etc/nginx/ssl/nginx.key;
   ssl_session_timeout 5m;
