nginx match wildcard subdirectories

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,10 +14,13 @@ server {
   ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
   ssl_prefer_server_ciphers on;
 
-  # This order might seem weird - this is attempted to match last if rules below fail.
-  # http://wiki.nginx.org/HttpCoreModule
+  # Match wp subdirectories
+  if ( $request_uri ~ (^/wp/[^/]*) ) {
+    set $dir $1;
+  }
+
   location / {
-    try_files $uri $uri/ /index.php?$args;
+    try_files $uri $uri/ $dir/index.php?$args;
   }
 
   # Add trailing slash to */wp-admin requests.
@@ -30,10 +33,10 @@ server {
 
   # Pass all .php files onto a php-fpm/php-fcgi server.
   location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    include fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param  SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
     fastcgi_pass php:9000;
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+    include fastcgi_params;
   }
 }
