--- a/docker.yml
+++ b/docker.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ../.html:/usr/share/nginx/html
       - ../:/usr/share/nginx/html/plugins/${PROJECT_NAME:-my-plugin}
+      - nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
     command: /wait-for-it.sh -t 600 php:9000 -- nginx -g 'daemon off;'
@@ -38,10 +39,13 @@ services:
         xdebug_remote_port: ${XDEBUG_REMOTE_PORT:-9000}
     container_name: ${PROJECT_NAME:-my-plugin}-php-${PHP_VERSION:-7.2}
     ports:
-      - "${LOCALHOST_PHP_PORT:-9001}:9000"
+      - "${LOCALHOST_PHP_PORT:-9000}:9000"
     volumes:
       - ../.html:/var/www/html
       - ../:/var/www/html/plugins/${PROJECT_NAME:-my-plugin}
+      - php/index.php:/var/www/html/index.php
+      - fixtures.example.yml:/var/www/html/fixtures.example.yml
+      - wp-cli.template.yml:/var/www/html/wp-cli.template.yml
     depends_on:
       - mysql
     networks:
@@ -83,7 +87,9 @@ services:
     links:
       - mysql:db
     ports:
-      - 8092:80
+      - "8092:80"
+    volumes:
+      - phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php
     depends_on:
       - mysql
     environment:
