--- a/fixtures.example.yml
+++ b/fixtures.example.yml
@@ -1,43 +1,71 @@
-Hellonico\Fixtures\Entity\Product:
-  product{1..2}:
-    name: '<productName()>'
-    type: '<randomElement(["simple", "grouped", "variable"])>'
-    status: '<randomElement(["draft", "pending", "private", "publish"])>'
-    featured: '<randomElement([0, 1])>'
-    catalog_visibility: '<randomElement(["visible", "catalog", "search", "hidden"])>'
-    description: '<paragraphs(5, true)>'
-    short_description: '<paragraphs(1, true)>'
-    sku: '<ean13()>'
-    regular_price: '<productPrice()>'
-    sale_price: '<productPrice()>'
-    date_on_sale_from: '<dateTimeBetween("-1 year", "now")>'
-    date_on_sale_from_gmt: '$date_on_sale_from'
-    date_on_sale_to: '<dateTimeBetween("now", "1 year")>'
-    date_on_sale_to_gmt: '$date_on_sale_to'
-    virtual: '<randomElement([0, 1])>'
-    downloadable: '<randomElement([0, 1])>'
-#    downloads:
-    download_limit: '<numberBetween(1, 10)>'
-    download_expiry: '<numberBetween(-1, 1000)>'
-    tax_status: '<randomElement(["taxable", "shipping", "none"])>'
-    tax_class: '<randomElement(["standard", "local"])>'
-    manage_stock: '<randomElement([0, 1])>'
-    stock_quantity: '<numberBetween(1, 100)>'
-#    in_stock:
-    backorders: '<randomElement(["yes", "no", "notify"])>'
-    sold_individually: '<randomElement([0, 1])>'
-    weight: '<numberBetween(1, 100)>'
-#    dimensions:
-#    shipping_class:
-#    reviews_allowed:
-#    upsell_ids:
-#    cross_sell_ids:
-#    parent_id:
-#    purchase_note:
-#    categories:
-#    tags:
-#    images:
-#    attributes:
-#    default_attributes:
-#    menu_order:
-#    meta_data:
+Hellonico\Fixtures\Entity\User:
+  user{1..2}:
+    user_login (unique): <username()>
+    user_pass: '123456'
+    user_email: '<safeEmail()>'
+    user_url: '<url()>'
+    user_registered: '<dateTimeThisDecade()>'
+    first_name: '<firstName()>'
+    last_name: '<lastName()>'
+    description: '<sentence()>'
+    role: '<randomElement(["subscriber", "customer"])>'
+    meta:
+      billing_first_name: '<firstName()>'
+      billing_last_name: '<lastName()>'
+      billing_company: '<company()>'
+      billing_address_1: '<streetAddress()>'
+      billing_address_2: '<secondaryAddress()>'
+      billing_city: '<city()>'
+      billing_postcode: '<postcode()>'
+      billing_country: '<countryCode()>'
+      billing_state: '<state()>'
+      billing_phone: '<phoneNumber()>'
+      billing_email: '<safeEmail()>'
+      shipping_first_name: '<firstName()>'
+      shipping_last_name: '<lastName()>'
+      shipping_company: '<company()>'
+      shipping_address_1: '<streetAddress()>'
+      shipping_address_2: '<secondaryAddress()>'
+      shipping_city: '<city()>'
+      shipping_postcode: '<postcode()>'
+      shipping_country: '<countryCode()>'
+      shipping_state: '<state()>'
+
+Hellonico\Fixtures\Entity\Term:
+  category{1..2}:
+    name (unique): '<productCategoryName())>'
+    description: '<sentence()>'
+    parent: '50%? <termId(childless=1)>'
+    taxonomy: 'product_cat'
+  tag{1..2}:
+    name (unique): '<words(2, true)>'
+    description: '<sentence()>'
+    taxonomy: 'product_tag'
+
+Hellonico\Fixtures\Entity\Post:
+  product{1..10}:
+    post_title: '<productName()>'
+    post_type: 'product'
+    #    post_status: '<randomElement(["draft", "pending", "private", "publish"])>'
+    post_content: '<paragraphs(rand(1,5), true)>'
+    post_excerpt: '<paragraphs(1, true)>'
+    tax_input:
+      product_cat: '<numberBetween(1, 3)>x @category*->term_id'
+      product_tag: '<numberBetween(1, 5)>x @tag*->term_id'
+      product_type: '<randomElement(["simple", "grouped", "variable"])>'
+    meta:
+      _backorders: '<randomElement(["yes", "no"])>'
+      _downloadable: '<randomElement(["yes", "no"])>'
+      _manage_stock: '<randomElement(["yes", "no"])>'
+      _price: '<productPrice()>'
+      _sku: '<ean13()>'
+      _sold_individually: '<randomElement(["yes", "no"])>'
+      _stock: '<numberBetween(1, 100)>'
+      _tax_class: '<randomElement(["standard", "vat"])>'
+      _tax_status: '<randomElement(["taxable", "shipping", "none"])>'
+      _virtual: '<randomElement(["yes", "no"])>'
+      _weight: '<numberBetween(1, 100)>'
+
+
+        # order{1..2}:
+      #   post_type: 'shop_order'
