--- a/wp-cli.template.yml
+++ b/wp-cli.template.yml
@@ -1,13 +1,13 @@
 path: ${WP_PATH}
 #url: ${WP_URL}
-#user: ${WP_USER}
+user: 1
 
 config create:
   dbname: ${DB_NAME}
   dbuser: root
   dbpass: ${DB_PASSWORD}
   dbhost: ${DB_HOST}
-  dbprefix: ${DB_PREFIX}
+  dbprefix: ${DB_PREFIX}_
   extra-php: |
     define( 'WP_DEBUG', true );
     define( 'WP_DEBUG_LOG', true );
