--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - "${LOCALHOST_HTTP_PORT:-80}:80"
       - "${LOCALHOST_HTTPS_PORT:-443}:443"
     volumes:
-      - ../.html:/usr/share/nginx/html
+      - ./.html:/usr/share/nginx/html
       - ../:/usr/share/nginx/html/plugins/${PROJECT_NAME:-my-plugin}
-      - nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
     command: /wait-for-it.sh -t 600 php:9000 -- nginx -g 'daemon off;'
@@ -41,11 +41,8 @@ services:
     ports:
       - "${LOCALHOST_PHP_PORT:-9000}:9000"
     volumes:
-      - ../.html:/var/www/html
+      - ./.html:/var/www/html
       - ../:/var/www/html/plugins/${PROJECT_NAME:-my-plugin}
-      - php/index.php:/var/www/html/index.php
-      - fixtures.example.yml:/var/www/html/fixtures.example.yml
-      - wp-cli.template.yml:/var/www/html/wp-cli.template.yml
     depends_on:
       - mysql
     networks:
@@ -72,7 +69,7 @@ services:
     ports:
       - "${LOCALHOST_MYSQL_PORT:-3306}:3306"
     volumes:
-      - ../.data/mysql${MYSQL_VERSION:-8.0}:/var/lib/mysql
+      - ./.db/mysql${MYSQL_VERSION:-8.0}:/var/lib/mysql
       - ./mysql:/etc/mysql/conf.d
     networks:
       - default
@@ -89,7 +86,7 @@ services:
     ports:
       - "8092:80"
     volumes:
-      - phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php
+      - ./phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php
     depends_on:
       - mysql
     environment:
@@ -103,8 +100,8 @@ services:
     image: mailhog/mailhog
     container_name: ${PROJECT_NAME:-my-plugin}-mailhog
     ports:
-      - "1025:1025"
       - "8025:8025"
+      - "1025:1025"
 
 networks:
   default:
