--- a/mysql/custom.cnf
+++ b/mysql/custom.cnf
@@ -1,3 +1,4 @@
 [mysqld]
-max_allowed_packet=32M
+collation-server = utf8mb4_general_ci
 default-authentication-plugin=mysql_native_password
+max_allowed_packet=32M
